--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".splashScreenActivity">
+        <activity
+            android:name=".CreateAcount"
+            android:enabled="true"
+            android:parentActivityName=".CreateAcount">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateAcount" />
+        <activity android:name=".splashScreenActivity" />
         <activity android:name=".Home" />
         <activity android:name=".Setting" />
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login" />
-        <activity android:name=".Profile"></activity>
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity
+            android:name=".Profile"
+            android:parentActivityName=".Home" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity
+            android:name=".profileViewer"
+            android:parentActivityName=".Home" />
+        <activity
+            android:name=".Chat"
+            android:parentActivityName=".Home" />
+        <activity
+            android:name=".SignUP"
+            android:label="@string/title_activity_sign_up" />
+        <activity android:name=".People" android:parentActivityName=".Home"></activity>
     </application>
 
 </manifest>
