--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,12 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.google.firebase:firebase-storage:16.0.3'
+    implementation("com.squareup.okhttp3:okhttp:3.12.0")
     implementation 'com.firebaseui:firebase-ui-database:4.2.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
