--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="com.toshi.aerke.Utilitis.OfflineStorage"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".CreateAcount"
+            android:name=".splashScreenActivity"
             android:enabled="true"
-            android:parentActivityName=".CreateAcount">
+            android:parentActivityName=".splashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".splashScreenActivity" />
+        <activity android:name=".CreateAcount" />
         <activity android:name=".Home" />
         <activity android:name=".Setting" />
         <activity
@@ -38,7 +39,7 @@
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".profileViewer"
-            android:parentActivityName=".Home" />
+            android:parentActivityName=".People" />
         <activity
             android:name=".Chat"
             android:parentActivityName=".Home" />
