--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,25 +8,34 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name="com.toshi.aerke.Utilitis.OfflineStorage"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/image_dove"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name="com.toshi.aerke.Utilitis.OfflineStorage"
         android:theme="@style/AppTheme">
         <activity
             android:name=".splashScreenActivity"
-            android:enabled="true"
-            android:parentActivityName=".splashScreenActivity">
+            android:noHistory="true" />
+
+        <activity android:name=".CreateAcount" />
+        <activity
+            android:name=".Home"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateAcount" />
-        <activity android:name=".Home" />
+
+        <service android:name="com.toshi.aerke.Utilitis.NotifactionSender$FirebaseInstanceService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity android:name=".Setting" />
         <activity
             android:name=".Login"
@@ -46,7 +55,17 @@
         <activity
             android:name=".SignUP"
             android:label="@string/title_activity_sign_up" />
-        <activity android:name=".People" android:parentActivityName=".Home"></activity>
+        <activity
+            android:name=".People"
+            android:parentActivityName=".Home" />
+
+        <service
+            android:name="com.toshi.aerke.Utilitis.FirebaseMessagingService"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter></service>
     </application>
 
 </manifest>
